# torchcvnn

./: .buildinfo  .gitignore  404.html  CODE_OF_CONDUCT.md  LICENSE  README.md  gen_ref_pages.py  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  sitemap.xml
.github/workflows/: ci-cd.yml  doc.yml  test.yml
_modules/: index.html
_modules/torchcvnn/datasets/: miccai2023.html  polsf.html
_sources/: index.rst.txt
_sources/modules/: datasets.rst.txt  nn.rst.txt
_sources/modules/_autosummary/: torchcvnn.nn.AvgPool2d.rst.txt  torchcvnn.nn.BatchNorm1d.rst.txt  torchcvnn.nn.BatchNorm2d.rst.txt  (+24 more)
docs/: gen_ref_pages.py  index.md  installation.md  mkdocs.yml  nn.md  requirements.txt
docs/source/: conf.py  index.rst
examples/: mnist.py  nir_miccai2023.py  nir_utils.py  patched_TIMM.py  read_alos2.py  read_slc.py  utils.py
getting_started/: installing.html
installation/: index.html
modules/: datasets.html  init.html  nn.html
modules/_autosummary/: torchcvnn.nn.AvgPool2d.html  torchcvnn.nn.BatchNorm1d.html  torchcvnn.nn.BatchNorm2d.html  torchcvnn.nn.CCELU.html  torchcvnn.nn.CELU.html  torchcvnn.nn.CGELU.html  torchcvnn.nn.CPReLU.html  torchcvnn.nn.CReLU.html  torchcvnn.nn.CSigmoid.html  torchcvnn.nn.CTanh.html  torchcvnn.nn.Cardioid.html  torchcvnn.nn.ConvTranspose2d.html  torchcvnn.nn.Dropout.html  torchcvnn.nn.Dropout2d.html  torchcvnn.nn.LayerNorm.html  torchcvnn.nn.MaxPool2d.html  torchcvnn.nn.Mod.html  torchcvnn.nn.MultiheadAttention.html  torchcvnn.nn.RMSNorm.html  torchcvnn.nn.Transformer.html  torchcvnn.nn.TransformerDecoderLayer.html  torchcvnn.nn.TransformerEncoderLayer.html  torchcvnn.nn.Upsample.html  torchcvnn.nn.modReLU.html  torchcvnn.nn.zAbsReLU.html  torchcvnn.nn.zLeakyReLU.html  torchcvnn.nn.zReLU.html
reference/SUMMARY/: index.html
reference/torchcvnn/: index.html
search/: search_index.json
sphinx_doc/source/: conf.py  index.rst
src/torchcvnn/: __init__.py
tests/: test_datasets.py  test_loss.py  test_nn_activation.py  test_nn_batchnorm.py  test_nn_conv.py  test_nn_dropout.py  test_nn_initialization.py  test_nn_layernorm.py  test_nn_loss.py  test_nn_pooling.py  test_nn_upsample.py  test_transformer.py  test_vit.py
torchcvnn-venv/: pyvenv.cfg
tutorials/: complex_mnist.html  loading_remote.html
(+98 files in other folders)
